--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,18 +1,37 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  width: 8px;
+  height: 4px;
+}
 
+::-webkit-scrollbar-thumb {
+  background-color: #e3e3e3;
+  border-radius: 4px;
+}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+::-webkit-scrollbar-track {
+  background: #fbfbfd;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  display: none;
+}
+
+.dashboard-container {
+  border: 2px solid transparent;
+  background: linear-gradient(white, white) padding-box,
+    linear-gradient(to right, #848dcf, #a6cfe8, #b897d3) border-box;
+}
+
+.modal-container {
+  border: 3px solid transparent;
+  background: linear-gradient(white, white) padding-box,
+    linear-gradient(to right, #3c4ed6, #50ade7, #a251e4) border-box;
 }
